Update branding and contact information in index.html and logo

--- a/index.html
+++ b/index.html
@@ -3,21 +3,20 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>CreatorStudio</title>
+    <title>Chipi Creative Hub</title>
     <link rel="stylesheet" href="style.css">
 
     <!-- Favicon -->
     <link rel="icon" type="x-icon" href="CreatorStudio.jpeg">
 
-   
+ 
 </head>
-
 <body>
    <header class="top-header">
   <p>
     Email:
     <strong>
-      <a href="mailto:rajakumarjha36@gmail.com">
+      <a href="mailto:support@chipitechnologies.com">
         rajakumarjha36@gmail.com
       </a>
     </strong>
@@ -26,7 +25,7 @@
   <p>
     Call:
     <strong>
-      <a href="tel:+918603683132">
+      <a href="tel:+919035424824">
         +91 8603683132
       </a>
     </strong>
@@ -37,7 +36,7 @@
   <nav class="nav-list">
     <div class="nav-left">
       <img src="logo-studio.png" alt="logo">
-      <h1>CreatorStudio</h1>
+      <h1>Chipi Creative Hub</h1>
     </div>
     <ul>
       <li><a href="#">Home</a></li>
